--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ nav ul li a:hover {
 nav ul li a.active {
     background:#d8e1db;
     color: black;
-    border-radius: 0px;
+    border-radius: 0 0 10PX 10px;
     box-shadow: inset 0 4px 6px #0000003f; /* Tambahkan efek bayangan */
     text-shadow: 2px 2px 4px #0000003f;
 }
