--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ footer .social-links {
     margin-bottom: 10px;
     margin-top: 10px;
     color: #f1c40f; /* Warna emas agar mencolok */
-    line-height: 1.2; /* Mengurangi jarak antar baris */
+    line-height: 0.7; /* Mengurangi jarak antar baris */
 }
 
 nav ul li a {
@@ -330,3 +330,8 @@ nav ul li a.active {
 
 <link rel="stylesheet" href="style.css?v=2">
 
+@media (max-width: 768px) {
+    .header-text {
+        font-size: 20px; /* Ukuran lebih kecil untuk judul */
+    }
+}
