--- a/styles.css
+++ b/styles.css
@@ -112,9 +112,11 @@ footer .social-links {
     margin-bottom: 10px;
     margin-top: 10px;
     color: #f1c40f; /* Warna emas agar mencolok */
-    line-height: 1.0; /* Mengurangi jarak antar baris */
+    line-height: 1.2; /* Mengurangi jarak antar baris */
 }
-
+h2 {
+    line-height: 1.2; /* Mengurangi jarak antar baris */
+}
 nav ul li a {
     display: block;
     padding: 5px 18px;
