--- a/styles.css
+++ b/styles.css
@@ -128,9 +128,11 @@ nav ul li a {
 
 nav ul {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 10px; /* Atur jarak antar menu */
     margin-bottom: 20px;
+    max-width: 100%;
 }
 
 nav ul li a:hover {
@@ -343,5 +345,12 @@ nav ul li a.active {
     }
     #kontak {
         margin-top: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    nav ul li a {
+        padding: 5px 10px;
+        gap: 3px;
     }
 }
